# ChromiumJniGenerator

./: README.md  build.gradle  settings.gradle
chromium-jni-generator-jvm-annotations/: README.md  build.gradle
chromium-jni-generator-jvm-annotations/src/main/java/org/chromium/jnigenerator/annotations/: AccessedByNative.java  CalledByNative.java  MainDex.java  (+22 more)
chromium-jni-generator-jvm-compiler/: README.md  build.gradle
chromium-jni-generator-native-essential/include/: chromium_jni_generator_native_essential.h
chromium-jni-generator-native-essential/src/: chromium_jni_generator_native_essential.cc
chromium-jni-generator-native-gen-script/: chromium_native_code_gen.sh  jni_generator.py
demo-app/: build.gradle
demo-app/release/: demo-app-release.apk  output-metadata.json
demo-app/src/androidTest/java/org/chromium/chromiumjnigenerator/: ExampleInstrumentedTest.kt
demo-app/src/main/: AndroidManifest.xml
demo-app/src/main/chromium-jni-generator-native-essential/: CMakeLists.txt  README.md
demo-app/src/main/chromium-jni-generator-native-gen-script/: README.md  chromium_native_code_gen.sh
demo-app/src/main/cpp/: CMakeLists.txt  ChromiumJniTestA.cc  ChromiumJniTestB.cc  jni_main.cc  jni_main.h
demo-app/src/main/java/org/chromium/chromiumjnigenerator/: ChromiumJniTestA.java  ChromiumJniTestB.java  MainActivity.kt
demo-app/src/main/res/values/: colors.xml  strings.xml  themes.xml
demo-app/src/main/res/values-night/: themes.xml
demo-app/src/test/java/org/chromium/chromiumjnigenerator/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+4 files in other folders)
